--- a/PDFWebTest/Views/PDFViews/NicePDF.cshtml
+++ b/PDFWebTest/Views/PDFViews/NicePDF.cshtml
@@ -1,4 +1,4 @@
-﻿@model RazorPDFWebTest.Views.PDFViews.NicePDFModel
+﻿@model Theoistic.PDFWebTest.Views.PDFViews.NicePDFModel
 
 <!DOCTYPE html>
 <html lang="en">
